Bug 1972255 - Allow discarding unused old state image keys in offscreen transactions. r=view-transitions-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D254646